--- a/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
+++ b/Tailspin.SpaceGame.Web/Tailspin.SpaceGame.Web.csproj
@@ -8,4 +8,10 @@
   <ItemGroup>
     <Folder Include="wwwroot\images\avatars\" />
   </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Tailspin.SpaceGame.Web.Models" Version="1.0.0" />
+  </ItemGroup>
+
+  <PackageReference Include="Tailspin.SpaceGame.Web.Models" Version="1.0.0-CI-20250413-073012" />
 </Project>
